# te

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  editor.cc.copy  premake5.lua  test.txt
include/: logging.hpp  options.hpp  util.hpp
src/: editor.cc  editor.hpp  explorerSection.cc  main.cc  text.cc  text.hpp  textSection.cc
